--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,16 @@
 {
-    "version":2,
-    "builds":[{
-        "src":"src/main.ts",
-        "use":"@vercel/node"
-    }],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"src/main.ts",
-            "methods":[
-                "GET",
-                "POST",
-                "DELETE",
-                "PUT",
-                "PATCH"
-            ]
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "build/main.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "build/main.js",
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
+    }
+  ]
 }
